--- a/FRONTEND/main.html
+++ b/FRONTEND/main.html
@@ -7,13 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="flex flex-col min-h-screen bg-grsy-100 font-sans antialised">
     <!-- Navbar-->
     <nav class="bg-green-600 p-4 text-white flex justify-between">
         <div>
             <h1 class="text-3x font-bold">AI Blog Generator</h1>
         </div>
+        <div>
+            <a href="#" class="text-white hover:underline">logout</a>
+        </div>
 
     </nav>
+    <br>
+    <br>
+
+    <!-- Main -->
+    <div class="fles-grow container mx-auto mt-10 px-4 sm:px-0">
+        <div class="max-w-3xl mx-auto bg-purple p-6 rounded-lg shadow-md transition">
+            <!--Introduction Section-->
+            <div class="text-center">
+                <h2 class="text-2xl font-semibold mb-4">Welcome to the AI Blog  Generator App</h2>
+                <p class="text-gray-700"> Tales by moon light</p>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
