--- a/FRONTEND/main.html
+++ b/FRONTEND/main.html
@@ -23,13 +23,18 @@
 
     <!-- Main -->
     <div class="fles-grow container mx-auto mt-10 px-4 sm:px-0">
-        <div class="max-w-3xl mx-auto bg-purple p-6 rounded-lg shadow-md transition">
+        <div class="max-w-3xl mx-auto bg-purple p-6 rounded-lg shadow-md transition-transform hover:scale-110 flex flex-col">
+           
             <!--Introduction Section-->
             <div class="text-center">
                 <h2 class="text-2xl font-semibold mb-4">Welcome to the AI Blog  Generator App</h2>
                 <p class="text-gray-700"> Tales by moon light</p>
             </div>
+
+            <br>
+            
         </div>
+
 
     </div>
 </body>
