--- a/FRONTEND/main.html
+++ b/FRONTEND/main.html
@@ -22,7 +22,7 @@
     <br>
 
     <!-- Main -->
-    <div class="fles-grow container mx-auto mt-10 px-4 sm:px-0">
+    <div class="flex-grow container mx-auto mt-10 px-4 sm:px-0">
         <div class="max-w-3xl mx-auto bg-purple p-6 rounded-lg shadow-md transition-transform hover:scale-110 flex flex-col">
            
             <!--Introduction Section-->
@@ -32,7 +32,7 @@
             </div>
 
             <br>
-            
+
         </div>
 
 
